# Healthy-Minds

./: .gitignore  README.md  pyproject.toml
backend/: .env.example  README.md  package.json  tsconfig.json
backend/prisma/: hello.sqlite  hello.sqlite-journal  schema.prisma
backend/prisma/migrations/20220805094341_initial_migration/: migration.sql
backend/prisma/migrations/20220806133023_patient_data/: migration.sql
backend/prisma/migrations/20220806151426_add_phone_number_field_to_patient/: migration.sql
backend/src/: config.ts  index.ts  upload.ts
backend/src/@types/: express.d.ts  index.d.ts
backend/src/controllers/: auth.ts  doc.ts  image.ts  patient.ts  upload.ts
backend/src/middlewares/: hasAuthenticated.ts
backend/src/utils/: blockchainFile.ts  fileHandler.ts  mlResponse.ts
backend/templates/: report.ejs
dashboard/: index.html  package.json
dashboard/src/: App.tsx  main.css  main.tsx
dashboard/src/components/: AddPatientData.tsx  Navbar.tsx  PatientDataTable.tsx
dashboard/src/context/: UserProvider.tsx
dashboard/src/screens/: AddPatientScreen.tsx  DashboardScreen.tsx  LoginScreen.tsx  PatientDetailScreen.tsx
dashboard/src/services/: http.tsx
dashboard/src/types/: index.d.ts
fileStore/: .gitignore  DockerFile  Program.cs  appsettings.json  docker-compose.yml  fileStore.csproj
fileStore/Controllers/: FileApiController.cs
fileStore/Properties/: launchSettings.json
ml/: Dockerfile  docker-compose.yml  main.py  pyproject.toml
ml-api/: main.py
ml/ml-api/: main.py
(+1 files in other folders)
