[tool.poetry]
name = "healthy-minds"
version = "0.1.0"
description = ""
authors = ["sovitpy <sovitlekhak@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
fastapi = "^0.79.0"
uvicorn = "^0.18.2"
pydantic = "^1.9.1"
Pillow = "^9.2.0"
tensorflow = "^2.9.1"
numpy = "^1.23.1"
seaborn = "^0.11.2"
pandas = "^1.4.3"
matplotlib = "^3.5.2"
scikit-learn = "^1.1.2"
imbalanced-learn = "^0.9.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
